--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -148,7 +148,7 @@
                               <p class="text-xs font-weight-bold mb-0 px-3"># <%= dataProduct.id  %></p>   
                           </td>
                           <td class="px-4">
-                            <img src="../img/products/<%= dataProduct.image %>" alt="" width="50" class="img-responsive"> 
+                            <img src="<%= dataProduct.image %>" alt="" width="50" class="img-responsive"> 
                           </td>
                           <td>
                               <div class="d-flex px-0 py-1">
