--- a/views/admin/editOrder.ejs
+++ b/views/admin/editOrder.ejs
@@ -76,7 +76,7 @@
                                 </span>
                               <% } %>
 
-                              <img class="rounded" style="width:350px; height: 450px;" src="/img/payment/<%= item.payment_img %>" alt="">
+                              <img class="rounded" style="width:350px; height: 450px;" src="<%= item.payment_img %>" alt="">
                               
                             </div>
                           </div>
