--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,7 @@
           <div class="product-card">
             <div class="card-img">
               <a href="/products/<%= product.id %>">
-                <img src="/img/products/<%= product.image %>" alt="">
+                <img src="<%= product.image %>" alt="">
               </a>
               <% if(product.total === 0) {%>
               <div class="out-of-stock">
@@ -125,9 +125,9 @@
         <h4>Copyright 2022 StoreKeeper Offical All Rights Reserved</h4>
     </div>
     <div class="footer-contact">
-        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://github.com/tnpwin/nodejs_storekeeper" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/tnpwin/nodejs_storekeeper-extreme" target="_blank"><i class="fab fa-github"></i></a>
     </div>
   </footer>
 
