--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -160,7 +160,7 @@
                     <td class="w-30">
                       <div class="d-flex px-2 py-1 align-items-center">
                         <div>
-                          <img src="/img/products/<%= dataProduct.image %>" alt="Country flag" width="50px">
+                          <img src="<%= dataProduct.image %>" alt="Country flag" width="50px">
                         </div>
                         <div class="ms-4">
                           <p class="text-xs font-weight-bold mb-0"><%= dataProduct.categoryName %></p>
