--- a/views/products.ejs
+++ b/views/products.ejs
@@ -25,7 +25,7 @@
         <div class="product-card">
           <div class="card-img">
             <a href="/products/<%=dataProduct.id %>">
-              <img src="/img/products/<%= dataProduct.image %>" alt="">
+              <img src="<%= dataProduct.image %>" alt="">
             </a>
             <% if(dataProduct.total === 0) {%>
             <div class="out-of-stock">
@@ -68,19 +68,11 @@
         <h4>Copyright 2022 StoreKeeper Offical All Rights Reserved</h4>
     </div>
     <div class="footer-contact">
-        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://github.com/tnpwin/nodejs_storekeeper" target="_blank"><i class="fab fa-github"></i></a>
-    </div>
+      <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/tnpwin/nodejs_storekeeper-extreme" target="_blank"><i class="fab fa-github"></i></a>
+  </div>
   </footer>
-
-
-
-
-
-
-
-
 
   <!-- <%- include ('siteFooter')%> -->
   <%- include ('siteScripts')%>
