--- a/views/siteHeader.ejs
+++ b/views/siteHeader.ejs
@@ -7,7 +7,7 @@
                     <li><span>wintnpnrp@gmail.com</span></li>
                 </ul>
                 <div class="logo">
-                    <a href="/">Shop<span id="logo-shop"> Keeper</span></a>
+                    <a href="/">Store<span id="logo-shop"> Keeper</span></a>
                 </div>
                 <div class="user-info">
                     <% if(locals.user){ %>
